Fix padding property in row class to ensure proper spacing

--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -137,7 +137,7 @@ h1, h2, h3, h4, h5, h5, h6 {
 }
 ul .row {
 	margin: 0;
-	padding: none;
+	padding: 0;
 	list-style: none;
 }
 .col-1-3 {
